--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^21.0.3",
     "@angular/router": "^21.0.3",
     "hamburgers": "^1.2.1",
+    "ngx-quill": "^30.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
