--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^21.0.3",
     "@angular/platform-browser": "^21.0.3",
     "@angular/router": "^21.0.3",
+    "@paypal/paypal-js": "^9.2.0",
     "hamburgers": "^1.2.1",
     "ngx-quill": "^30.0.1",
     "rxjs": "~7.8.0",
