--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@angular/forms": "^21.0.3",
     "@angular/platform-browser": "^21.0.3",
     "@angular/router": "^21.0.3",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "@paypal/paypal-js": "^9.2.0",
     "hamburgers": "^1.2.1",
     "ngx-quill": "^30.0.1",
